add-exports identification